see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Jan-2011 Jean-Marie Simonet
 # [#24320] Unstyled dialog when clicking 'new' in module manager. Thanks Andrea.
 # Updating credits
 # [#24550] Manifest data is not being serialized as JSON during install and discovery install. Thanks Brian Towles.

26-Jan-2011 Mark Dexter
# [#24513] *Incorrect error string after saving default menu item with set 'Default Page' radio button to 'no' value
# [#24607] *No translation of options (plugin names) in ordering field of plugins

26-Jan-2011 Jean-Marie Simonet
 # [#24599] Templates filter searches all extensions. Thanks CY Lee.
 $ Updating zh-CN
 # [#24619] Wrong description language code for email1 field. Thanks Bill.
 $ Correcting some lang strings values.
 #$ [#24615] Extra language definitions for icon tooltips in Messages component
 #$ [#24587] beez template typo with position-15
 $ Adding pt-PT installation lang
 
25-Jan-2011 Jean-Marie Simonet
 $ Adding el-GR, ka-GE installation langs
 $ Adding fi-FI installation langs. Modifying gu-IN.
 # [#24580] Localise xml default language is not highlighted in the drop down
 # [#24582] Languages not installed in db but present in the language folders in joomla issue
 # [#24564] mod_articles_category creates wrong html code. Thanks Andras.

24-Jan-2011 Jean-Marie Simonet
 $ Updating af-ZA
 #$ [#24457] Language fixes and new warnings for com_installer. Thanks Sam.
 # [#24540] New Window without navigation. Thanks Byron and Bill.
 $ Updating ru-RU, sk-SK
 $ Updating ca-ES, adding ml-IN installation lang
 $ Correcting parse errors in ml-IN.ini